# bumpversion

./: .goreleaser.yaml  Cargo.toml  README.md
crates/bumpversion/: Cargo.toml
crates/bumpversion-cli/: Cargo.toml
crates/bumpversion-cli/src/: bumpversion.rs  common.rs  options.rs
crates/bumpversion-cli/tests/: test_cli.rs
crates/bumpversion/src/: diagnostics.rs  f_string.rs  files.rs  lib.rs  logging.rs  version.rs
crates/bumpversion/src/config/: change.rs  file.rs  global.rs  ini.rs  mod.rs  pyproject_toml.rs  regex.rs  toml.rs  version.rs
crates/bumpversion/src/vcs/: git.rs  mod.rs
crates/bumpversion/tests/: test_component.rs  test_serialization.rs
