[package]
name = "bumpversion-cli"
license-file = "../../LICENSE"
readme = "../../README.md"
documentation = "https://docs.rs/bumpversion-cli"
publish = true

version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
categories = [
  "command-line-utilities",
]
keywords = [
  "semver",
  "bumpversion",
  "bump2version",
]

default-run = "bumpversion"

[[bin]]
name = "bumpversion"
path = "src/bumpversion.rs"

[[bin]]
name = "cargo-bumpversion"
path = "src/cargo_bumpversion.rs"

[lints]
workspace = true

[dependencies]
color-eyre.workspace = true

# cli
clap = { version = "4", features = ["derive", "env", "color"] }

# logging
tracing.workspace = true
tracing-subscriber = { version = "0", features = ["json", "env-filter"] }

# colors and diagnostics
colored = "3"
termcolor = "1"
codespan-reporting = "0"

# async runtime 
tokio.workspace = true
futures.workspace = true

bumpversion = { path = "../bumpversion" }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.24.0"
